source/courses/learnk8s/code/k8s-fundamentals/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /first
        backend:
          serviceName: app
          servicePort: 80
